--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   provider: ^6.0.3
   intl: ^0.17.0
   http: ^0.13.4 
+  flutter_dotenv: ^5.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,7 +62,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+      - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
